# mltk

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/base/: CMakeLists.txt  cxx11.h  static_assert.h  static_assert_test.cpp  type_cast.h
common/base/preprocess/: join.h
common/base/string/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithm_test.cpp  compare.cpp  compare.h  string_piece.cpp  string_piece.h  string_piece_test.cpp
common/system/: CMakeLists.txt
common/system/memory/: CMakeLists.txt  unaligned.h  unaligned_test.cpp
common/system/memory/unaligned/: align_insensitive.h  check_direct_include.h  gcc.h  generic.h  msc.h
mltk/: CMakeLists.txt
mltk/common/: .vocabulary.h.swp  CMakeLists.txt  city.cc  city.h  double_vector.h  double_vector_test.cc  feature.h  feature_test.cc  feature_vocabulary.h  feature_vocabulary_test.cc  instance.h  instance_test.cc  logging.h  logging_test.cc  mem_instance.h  mem_instance_test.cc  model_data.cc  model_data.h  model_data_test.cc  string_algorithm.h  string_algorithm_test.cc  vocabulary.h  vocabulary_test.cc
mltk/common/testdata/: test.model
mltk/lda/: CMakeLists.txt  document.cc  document.h  document_test.cc  model.h
mltk/lda/python/: README.md  lda_inferencer.py  lda_trainer.py
mltk/lda/python/common/: document.py  document_test.py  lda.proto  lda_pb2.py  model.py  model_test.py  ordered_sparse_topic_histogram.py  ordered_sparse_topic_histogram_test.py  recordio.py  recordio_test.py  vocabulary.py  vocabulary_test.py
mltk/lda/python/inference/: multi_chain_gibbs_sampler.py  multi_chain_gibbs_sampler_test.py  sparselda_gibbs_sampler.py  sparselda_gibbs_sampler_test.py
mltk/lda/python/testdata/: vocab.txt
mltk/lda/python/testdata/checkpoint/10/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/10/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/100/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/100/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/110/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/110/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/120/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/120/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/130/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/130/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/140/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/140/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/150/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/150/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/160/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/160/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/170/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/170/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/180/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/180/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/190/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/190/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/20/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/20/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/200/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/200/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/30/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/30/lda_model/: lda.global_topic_hist  lda.hyper_params  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/40/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/40/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/50/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/50/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/60/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/60/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/70/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/70/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/80/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/80/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/checkpoint/90/corpus/: documents.1
mltk/lda/python/testdata/checkpoint/90/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/testdata/lda_model/: lda.global_topic_hist  lda.word_topic_hist
mltk/lda/python/training/: model_evaluator.py  model_evaluator_test.py  sparselda_train_gibbs_sampler.py  sparselda_train_gibbs_sampler_test.py  topic_words_stat.py  topic_words_stat_test.py
mltk/maxent/: BUILD  CMakeLists.txt  README.md  double_vector.h  feature.h  instance.h  lbfgs.cc  lbfgs.h  maxent.cc  maxent.h  maxent_predictor_main.cc  maxent_test.cc  maxent_trainer_main.cc  optimizer.cc  optimizer.h  owlqn.cc  owlqn.h  sgd.cc  sgd.h  vocabulary.h
