
PROJECT(MLTK)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(mltk)

MESSAGE(STATUS "The BINARY dir is " ${MLTK_BINARY_DIR})
MESSAGE(STATUS "The SOURCE dir is " ${MLTK_SOURCE_DIR})

ENABLE_TESTING()
FIND_PACKAGE(Threads)

# you should "export GTEST_ROOT GFLAGS_ROOT GLOG_ROOT" first
MESSAGE(STATUS GTEST_ROOT=$ENV{GTEST_ROOT})
MESSAGE(STATUS GFLAGS_ROOT=$ENV{GFLAGS_ROOT})
MESSAGE(STATUS GLOG_ROOT=$ENV{GLOG_ROOT})

INCLUDE_DIRECTORIES(${MLTK_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{GTEST_ROOT}/include)
LINK_DIRECTORIES($ENV{GTEST_ROOT}/lib)
INCLUDE_DIRECTORIES($ENV{GFLAGS_ROOT}/include)
LINK_DIRECTORIES($ENV{GFLAGS_ROOT}/lib)
INCLUDE_DIRECTORIES($ENV{GLOG_ROOT}/include)
LINK_DIRECTORIES($ENV{GTLOG_ROOT}/lib)
