
ADD_SUBDIRECTORY(string)

INCLUDE_DIRECTORIES(${MLTK_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{GTEST_ROOT}/include)
LINK_DIRECTORIES($ENV{GTEST_ROOT}/lib)

ADD_EXECUTABLE(base_test static_assert_test.cpp)
TARGET_LINK_LIBRARIES(base_test gtest gtest_main)
TARGET_LINK_LIBRARIES(base_test ${CMAKE_THREAD_LIBS_INIT})

ADD_TEST(NAME base_test COMMAND base_test)
