
SET(LIBRARY_OUTPUT_PATH ${MLTK_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${MLTK_SOURCE_DIR}/bin/mltk/lda)

SET(SRC_LIST document.cc)

ADD_LIBRARY(lda SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(lda PROPERTIES CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(lda mltk_common)

ADD_LIBRARY(lda_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(lda_static PROPERTIES OUTPUT_NAME "lda")
SET_TARGET_PROPERTIES(lda_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(lda_static mltk_common)

IF (test)
    INCLUDE_DIRECTORIES($ENV{GTEST_ROOT}/include)
    LINK_DIRECTORIES($ENV{GTEST_ROOT}/lib)

    ADD_EXECUTABLE(lda_test document_test.cc)
    TARGET_LINK_LIBRARIES(lda_test lda gtest gtest_main)
    TARGET_LINK_LIBRARIES(lda_test ${CMAKE_THREAD_LIBS_INIT})

    ADD_TEST(NAME lda_test COMMAND ${EXECUTABLE_OUTPUT_PATH}/lda_test)
ENDIF()

INCLUDE_DIRECTORIES($ENV{GFLAGS_ROOT}/include)
LINK_DIRECTORIES($ENV{GFLAGS_ROOT}/lib)
INCLUDE_DIRECTORIES($ENV{GLOG_ROOT}/include)
LINK_DIRECTORIES($ENV{GLOG_ROOT}/lib)

